--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>himanshu shamrma</h1>
+    <h2>abes</h2>
+    <h3>cse</h3>
+    <h4>cse17</h4>
+    <h5>lives in flat</h5>
+    <h6>bored</h6>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius explicabo temporibus, illo mollitia eum earum blanditiis facere consequatur. Nostrum, eligendi.</p>
+    <img src="https://imgs.search.brave.com/RNpThcQc1yYx5BNbK-oLHnG46579qVLqAXFGRu916qI/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly93YWxs/cGFwZXJzLmNvbS9p/bWFnZXMvaGQvYW1v/bGVkLXMtd2l0aC1z/LWY5YTV3MXR4M3Ry/ajZlanQuanBn" alt=" click here">
 </body>
 </html>
