--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,7 @@
     <h6>bored</h6>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius explicabo temporibus, illo mollitia eum earum blanditiis facere consequatur. Nostrum, eligendi.</p>
     <img src="https://imgs.search.brave.com/RNpThcQc1yYx5BNbK-oLHnG46579qVLqAXFGRu916qI/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly93YWxs/cGFwZXJzLmNvbS9p/bWFnZXMvaGQvYW1v/bGVkLXMtd2l0aC1z/LWY5YTV3MXR4M3Ry/ajZlanQuanBn" alt=" click here">
-    <table border ="1">
+    <table border ="1"> <caption> scholar</caption>
         <tr>
             <th> S.id</th>
             <th> s.name</th>
@@ -56,5 +56,34 @@
         
 
     </table>
+    <br>
+    <br>
+    <table border ="1"> <CAPTIOn> RESUME</CAPTION>
+        <tr>
+            
+            <th> qualification </th>
+            <th> college name</th>
+            <th> year of passing</th>
+            <th> percentage</th>
+        </tr>
+        <tr>
+            <td> btech</td>
+            <td>iiit</td>
+            <td> 2024</td>
+            <td> 90</td>
+        </tr>
+        <tr>
+            <td> mtech</td>
+            <td> abes</td>
+            <td> 2025</td>
+            <td> 87</td>
+        </tr>
+        <tr>
+            <td> mba</td>
+            <td> iim ahmedabad</td>
+            <td> 2023</td>
+            <td> 95</td>
+        </tr>
+         </table>
 </body>
 </html>
