--- a/HTML/index.html
+++ b/HTML/index.html
@@ -85,5 +85,34 @@
             <td> 95</td>
         </tr>
          </table>
+         <table border ="5"> <caption> TIME TABLE</caption>
+            <br>
+            <br>
+            <tr>
+                <th> Day</th>
+                <th> 9-10 AM</th>
+                <th>10-11 AM</th>
+                <th> 11-12 PM</th>
+            </tr>
+            <tr>
+                <td rowspan="2"> monday</td>
+                <td>maths</td>
+                <td> science</td>
+                <td>english</td>
+            </tr>
+            <tr>
+                <td colspan="2"> computerlab</td>
+                <td>games</td>
+            </tr>
+            <tr>
+                <td rowspan="2"> Tuesday</td>
+                <td>history</td>
+                <td>math</td>
+                <td>geography</td>
+            </tr>
+            <tr>
+                <td colspan="3">project work</td>
+            </tr>
+         </table>
 </body>
 </html>
