--- a/css/index.html
+++ b/css/index.html
@@ -23,6 +23,15 @@
   width: 150px;
 }
 </style>
+<style>
+#change4 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+ width = 300px;
+}
+</style>
+
 
 
 
@@ -36,7 +45,9 @@
 <img id="change2"src="Screenshot 2025-10-15 153804.png" alt="Paris" width="300" height="300">
  <h2>Thumbnail Image</h2>
 <img  id ="change3"src="Screenshot 2025-10-15 153804.png" alt="Paris">
-
+<h2>Center an Image</h2>
+<p>To center an image, set left and right margin to auto, and make it into a block element.</p>
+<img id ="change4" src="Screenshot 2025-10-15 153804.png" alt="Paris">
 
 </body>
 
