--- a/css/index.html
+++ b/css/index.html
@@ -31,6 +31,22 @@
  width = 300px;
 }
 </style>
+<style>
+    #change5{
+body {margin:25px;}
+div.polaroid {
+  width: 80%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+}div.container {
+  text-align: center;
+  padding: 10px 20px;
+}
+    }
+</style>
+
+
 
 
 
@@ -48,6 +64,13 @@
 <h2>Center an Image</h2>
 <p>To center an image, set left and right margin to auto, and make it into a block element.</p>
 <img id ="change4" src="Screenshot 2025-10-15 153804.png" alt="Paris">
+ <h2>Responsive Polaroid Images / Cards</h2>
+<div class="polaroid">
+  <img id="change5" src="Screenshot 2025-10-15 160540.png" alt="5 Terre" style="width:100%">
+  <div class="container">
+  <p>Cinque Terre</p>
+  </div>
+</div>
 
 </body>
 
